Finish login/register and start on events

--- a/RestaurantRoulette/app/src/main/AndroidManifest.xml
+++ b/RestaurantRoulette/app/src/main/AndroidManifest.xml
@@ -32,13 +32,22 @@
             android:label="@string/title_activity_maps" >
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".Login"
             android:label="@string/title_activity_login" >
         </activity>
-
         <activity
-            android:name=".RegisterActivity"
+            android:name=".Register"
             android:label="@string/title_activity_register" >
+        </activity>
+        <activity
+            android:name=".Account"
+            android:label="@string/title_activity_account"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".CreateEvent"
+            android:label="@string/title_activity_create_event"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
