--- a/RestaurantRoulette/app/build.gradle
+++ b/RestaurantRoulette/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.google.android.gms:play-services:7+'
     compile 'com.google.code.gson:gson:2.2.4'
 }
