--- a/RestaurantRoulette/app/src/main/AndroidManifest.xml
+++ b/RestaurantRoulette/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".App" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -54,13 +55,19 @@
         </activity>
         <activity
             android:name=".Account"
-            android:label="@string/title_activity_account"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:label="@string/title_activity_account" >
         </activity>
         <activity
             android:name=".CreateEvent"
-            android:label="@string/title_activity_create_event"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:label="@string/title_activity_create_event" >
+        </activity>
+        <activity
+            android:name=".EventDetails"
+            android:label="@string/title_activity_event_details" >
+        </activity>
+        <activity
+            android:name=".MyEvents"
+            android:label="@string/title_activity_my_events" >
         </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
